--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-    body {
+    .body {
       background-image: url(img/flag.jpg);
       background-repeat: no-repeat;
       background-size: 1700px 850px;
